<resources>
    <string name="app_name">LunaTracker</string>
    <string name="title">🌜 LunaTracker 🌛</string>
    <string name="logbook">Logged events</string>

    <!-- menu header items -->
    <string name="event_bottle_type" translatable="false">🍼</string>
    <string name="event_food_type" translatable="false">🥣</string>
    <string name="event_weight_type" translatable="false">⚖️</string>
    <string name="event_breastfeeding_left_type" translatable="false">🤱⬅️</string>
    <string name="event_breastfeeding_both_type" translatable="false">🤱↔️</string>
    <string name="event_breastfeeding_right_type" translatable="false">🤱➡️️</string>
    <string name="event_diaperchange_poo_type" translatable="false">🚼 💩</string>
    <string name="event_diaperchange_pee_type" translatable="false">🚼 💧</string>
    <string name="event_medicine_type" translatable="false">💊</string>
    <string name="event_enema_type" translatable="false">🪠</string>
    <string name="event_note_type" translatable="false">📝</string>
    <string name="event_temperature_type" translatable="false">🌡️</string>
    <string name="event_colic_type" translatable="false">💨</string>
    <string name="event_puke_type" translatable="false">🤮</string>
    <string name="event_bath_type" translatable="false">🛁</string>
    <string name="event_sleep_type" translatable="false">💤</string>
    <string name="event_unknown_type" translatable="false">❓</string>

    <!-- dropdown menu item -->
    <string name="event_type_item_bottle">🍼 Bottle</string>
    <string name="event_type_item_food">🥣 Food</string>
    <string name="event_type_item_weight">⚖️ Weight</string>
    <string name="event_type_item_breastfeeding_left">🤱⬅️ Nursing</string>
    <string name="event_type_item_breastfeeding_both">🤱↔️ Nursing</string>
    <string name="event_type_item_breastfeeding_right">🤱➡️️ Nursing</string>
    <string name="event_type_item_diaperchange_poo">🚼💩 Diaper</string>
    <string name="event_type_item_diaperchange_pee">🚼💧 Diaper</string>
    <string name="event_type_item_medicine">💊 Medicine</string>
    <string name="event_type_item_enema">🪠 Enema</string>
    <string name="event_type_item_note">📝 Note</string>
    <string name="event_type_item_temperature">🌡️ Temperature</string>
    <string name="event_type_item_colic">💨 Colic</string>
    <string name="event_type_item_puke">🤮 Puke</string>
    <string name="event_type_item_sleep">💤 Sleep</string>
    <string name="event_type_item_bath">🛁 Bath</string>
    <string name="event_type_item_unknown">❓ Unknown</string>

    <!-- dialog titles -->
    <string name="event_bottle_desc">Milk Bottle</string>
    <string name="event_food_desc">Food</string>
    <string name="event_weight_desc">Weight</string>
    <string name="event_breastfeeding_left_desc">Nursing (left)</string>
    <string name="event_breastfeeding_both_desc">Nursing (both)</string>
    <string name="event_breastfeeding_right_desc">Nursing (right)</string>
    <string name="event_diaperchange_poo_desc">Diaper Change (poo)</string>
    <string name="event_diaperchange_pee_desc">Diaper Change (pee)</string>
    <string name="event_medicine_desc">Medicine</string>
    <string name="event_enema_desc">Enema</string>
    <string name="event_note_desc">Note</string>
    <string name="event_temperature_desc">Temperature</string>
    <string name="event_colic_desc">Gaseous colic</string>
    <string name="event_puke_desc">Puke</string>
    <string name="event_bath_desc">Bath</string>
    <string name="event_sleep_desc">Sleep</string>
    <string name="event_unknown_desc">Unknown</string>

    <string name="toast_event_added">Event logged</string>
    <string name="toast_logbook_saved">Logbook saved</string>
    <string name="toast_event_add_error">Unable to log the event</string>
    <string name="toast_integer_error">Invalid value. Insert an integer.</string>
    <string name="toast_date_error">Invalid date.</string>

    <string name="now">now</string>
    <string name="second_ago">sec</string>
    <string name="seconds_ago">secs</string>
    <string name="minute_ago">min</string>
    <string name="minutes_ago">mins</string>
    <string name="hour_ago">hour</string>
    <string name="hours_ago">hours</string>
    <string name="day_ago">day</string>
    <string name="days_ago">days</string>
    <string name="year_ago">year</string>
    <string name="years_ago">years</string>

    <string name="amount_unspecified"></string>
    <string name="amount_little">Little</string>
    <string name="amount_normal">Normal</string>
    <string name="amount_plenty">Plenty</string>

    <string name="no_connection">No connection</string>
    <string name="no_connection_explain">Unable to reach WebDAV service</string>
    <string name="no_connection_go_to_settings">Settings</string>
    <string name="no_connection_retry">Retry</string>

    <string name="statistics_title">Statistics</string>
    <string name="statistics_no_data">No Data</string>

    <string name="settings_dynamic_menu">Dynamic Menu</string>
    <string name="settings_dynamic_menu_desc">Populate the header menu with the most used events.</string>
    <string name="settings_title">Settings</string>
    <string name="settings_signature">Signature</string>
    <string name="settings_signature_desc">Attach a signature to each event you create and for others to see. Useful if multiple people add events.</string>
    <string name="settings_storage">Choose where to save data</string>
    <string name="settings_storage_local">On device</string>
    <string name="settings_storage_local_desc">Most privacy-friendly solution: data doesn\'t leave your device</string>
    <string name="settings_storage_dav">On a WebDAV server</string>
    <string name="settings_storage_dav_desc">You can use any WebDAV service (i.e. Nextcloud, Owncloud, Dropbox, Box…) to save the data. In this way, you can syncronize it between more devices, i.e., the dad\'s, the mom\'s, the grandma\'s… You will need the WebDAV URL, you can find it in your provider\'s documentation (i.e. in Nextcloud web is in the Files app settings)</string>
    <string name="settings_storage_dav_url">WebDAV URL</string>
    <string name="settings_storage_dav_url_hint">https://</string>
    <string name="settings_storage_dav_user">Username</string>
    <string name="settings_storage_dav_pass">Password</string>
    <string name="settings_network_error">Unable to reach server: </string>
    <string name="settings_webdav_error_denied">Wrong WebDAV user or password</string>
    <string name="settings_webdav_error_server_offline">WebDAV server is currently unavailable</string>
    <string name="settings_webdav_error_generic">Error while trying to access WebDAV:</string>
    <string name="settings_webdav_creation_error_generic">Unable to save a file on the WebDAV server:</string>
    <string name="settings_webdav_creation_ok">Successfully connected with the WebDAV server</string>
    <string name="settings_json_error">There\'s a save file on the server, but it is corrupted or unreadable. Please delete it </string>
    <string name="settings_generic_error">Error: </string>
    <string name="settings_webdav_upload_error">Error while uploading local logbook %1$s to webdav: %2$s</string>

    <string name="trim_logbook_dialog_title">Your logbook is pretty big!</string>
    <string name="trim_logbook_dialog_message_local">Your logbook file is growing a lot. We suggest trimming the oldest events to avoid crashes.</string>
    <string name="trim_logbook_dialog_message_dav">Your logbook file is growing a lot. We suggest trimming the oldest events to avoid crashes. If you want to preserve all the events, please back up the "lunatracker_logbook.json" file on the WebDAV server or rename it to start a new logbook, keeping the old one.</string>
    <string name="trim_logbook_dialog_button_ok">Trim it now</string>
    <string name="trim_logbook_dialog_button_cancel">Remind me later</string>

    <string name="log_amount_dialog_description">Select the amount:</string>
    <string name="log_bottle_dialog_description">Insert the quantity contained in the baby bottle:</string>
    <string name="log_medicine_dialog_description">Medicine name, quantity, type, notes…:</string>
    <string name="log_notes_dialog_description">Notes:</string>
    <string name="log_notes_dialog_note_hint">Write some notes</string>
    <string name="log_notes_dialog_qty_hint">Quantity (or empty)</string>
    <string name="log_temperature_dialog_description">Select the temperature:</string>
    <string name="log_unknown_dialog_description"></string>
    <string name="log_weight_dialog_description">Insert the weight:</string>
    <string name="log_duration_dialog_description">Set duration:</string>

    <string name="measurement_unit_liquid_base_metric" translatable="false">ml</string>
    <string name="measurement_unit_weight_base_metric" translatable="false">g</string>
    <string name="measurement_unit_weight_tiny_metric" translatable="false">mg</string>
    <string name="measurement_unit_liquid_base_imperial" translatable="false">fl oz.</string>
    <string name="measurement_unit_weight_base_imperial" translatable="false">oz</string>
    <string name="measurement_unit_weight_tiny_imperial" translatable="false">gr</string>
    <string name="measurement_unit_temperature_base_imperial" translatable="false">°F</string>
    <string name="measurement_unit_temperature_base_metric" translatable="false">°C</string>

    <string name="statistics_bottle_events">Bottle Events</string>
    <string name="statistics_bottle_sum">Bottle Per Day</string>
    <string name="statistics_medicine_events">Medicine Events</string>
    <string name="statistics_sleep_sum">Sleep Per Day</string>
    <string name="statistics_sleep_events">Sleep Events</string>
    <string name="statistics_sleep_pattern">Sleep Pattern</string>

    <string name="row_luna_event_description">Description</string>
    <string name="row_luna_event_quantity">Qty</string>
    <string name="row_luna_event_time">Time</string>

    <string name="dialog_event_detail_title">Event detail</string>
    <string name="dialog_event_detail_close_button">Close</string>
    <string name="dialog_event_detail_save_button">Save</string>
    <string name="dialog_event_detail_delete_button">Delete</string>
    <string name="dialog_event_detail_quantity">Quantity</string>
    <string name="dialog_event_detail_notes">Notes</string>
    <string name="dialog_event_detail_signature">by %s</string>

    <string name="dialog_duration_button_clear">Clear</string>
    <string name="dialog_duration_button_minus_5">-5 min</string>
    <string name="dialog_duration_button_now">Now</string>
    <string name="dialog_duration_button_plus_5">+5 min</string>

    <string name="dialog_add_logbook_title">Add logbook</string>
    <string name="dialog_add_logbook_logbookname">👶 Logbook name</string>
    <string name="dialog_add_logbook_message">Write a name to identify this logbook. This name will appear on top of the screen and, if you use WebDAV, will be in the save file name as well.</string>
    <string name="dialog_add_logbook_message_intro">Welcome! To use this app, you need to create at least one logbook. You would probably want to call it with your child\'s name.</string>

    <string name="default_logbook_name">👶 My first logbook</string>
    <string name="logbook_created">New logbook created: </string>

</resources>