<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    android:paddingBottom="10dp"
    android:paddingHorizontal="20dp">

    <TextView
        android:id="@+id/dialog_event_detail_type_emoji"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="60sp"
        android:text="@string/event_diaperchange_pee_type" />

    <TextView
        android:id="@+id/dialog_event_detail_type_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center_horizontal"
        android:textColor="@color/accent"
        android:textSize="32sp"
        android:text="@string/event_diaperchange_pee_desc" />

    <TextView
        android:id="@+id/dialog_event_detail_type_date"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:drawablePadding="10dp"
        android:drawableTint="@color/accent"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/dialog_event_detail_type_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="28sp"
        android:text="@string/dialog_event_detail_quantity"/>

    <TextView
        android:id="@+id/dialog_event_detail_type_date_end"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:drawablePadding="10dp"
        android:drawableTint="@color/accent"
        android:visibility="gone"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/dialog_event_detail_type_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:textSize="20sp"
            android:text="@string/dialog_event_detail_notes"/>

    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/dialog_event_detail_type_signature"
        android:layout_marginBottom="5dp"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_event_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="12sp"
            android:text="" />

        <Space
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/dialog_event_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:textSize="12sp"
            android:text="" />

    </LinearLayout>

</LinearLayout>