<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/button_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_gravity="end"
                android:src="@drawable/ic_settings"
                app:tint="@color/grey"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title"
                android:textSize="26sp"
                android:gravity="center"/>

            <ImageView
                android:id="@+id/button_sync"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_gravity="start"
                android:src="@drawable/ic_sync"
                app:tint="@color/grey"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_background">

            <Spinner
                android:id="@+id/logbooks_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            </FrameLayout>

            <TextView
                android:id="@+id/logbooks_add_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textStyle="bold"
                android:textColor="@color/accent"
                android:textSize="20sp"
                android:text="+"
                android:background="@drawable/button_background"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttons_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linear_layout_row1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/button1_row1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/button_background"
                    android:gravity="center_horizontal"
                    android:textSize="50sp"
                    android:text="@string/event_bottle_type"/>

                <TextView
                    android:id="@+id/button2_row1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/button_background"
                    android:gravity="center_horizontal"
                    android:textSize="50sp"
                    android:text="@string/event_food_type"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_row2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/button1_row2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:gravity="center_horizontal"
                    android:textSize="30sp"/>

                <TextView
                    android:id="@+id/button2_row2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:gravity="center_horizontal"
                    android:textSize="30sp"/>

                <TextView
                    android:id="@+id/button3_row2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:gravity="center_horizontal"
                    android:textSize="30sp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_row3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/button1_row3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="2"
                    android:background="@drawable/button_background"
                    android:gravity="center_horizontal"
                    android:textSize="30sp"/>

                <TextView
                    android:id="@+id/button2_row3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="2"
                    android:background="@drawable/button_background"
                    android:gravity="center_horizontal"
                    android:textSize="30sp"/>

                <TextView
                    android:id="@+id/button_more"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:gravity="center_horizontal"
                    android:textSize="30sp"
                    android:text="☰"
                    app:tint="@android:color/darker_gray"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logbook"
                android:textColor="@color/accent"
                android:textStyle="bold"/>

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/progress_indicator"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                android:indeterminate="true"
                app:indicatorColor="@color/accent"
                android:visibility="invisible"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_events"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/no_connection_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/translucent"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:visibility="gone">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/ic_connection"
            app:tint="@color/accent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="30sp"
            android:textColor="@color/accent"
            android:text="@string/no_connection"/>

        <TextView
            android:id="@+id/no_connection_screen_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/no_connection_explain"/>

        <Button
            android:id="@+id/button_no_connection_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/ic_sync"
            android:drawableTint="@color/white"
            android:drawablePadding="10dp"
            android:text="@string/no_connection_retry"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/button_no_connection_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/ic_settings"
            android:drawableTint="@color/white"
            android:drawablePadding="10dp"
            android:text="@string/no_connection_go_to_settings"
            android:textColor="@color/white"/>

    </LinearLayout>

</FrameLayout>